--- a/template/package.json
+++ b/template/package.json
@@ -66,6 +66,7 @@
   "postcss-import": "^11.1.0",
   "postcss-loader": "^2.1.1",
   "postcss-plugin-px2rem": "^0.6.0",
+  "filemanager-webpack-plugin": "^1.0.26",
   "semver": "^5.3.0",
   "shelljs": "^0.7.6",
   "style-loader": "^0.18.2",
