--- a/template/package.json
+++ b/template/package.json
@@ -12,9 +12,7 @@
     "md5": "node build/md5.js"
   },
   "dependencies": {
-    "vue": "^2.1.10",
-    "@ta/appinterface": "^0.0.11",
-    "@ta/snail-ui": "^0.0.22"{{#router}},
+    "vue": "^2.1.10",{{#router}},
     "vue-router": "^2.2.0"{{/router}}
   },
   "devDependencies": {
